# oh-my-db

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.csv  env.sh  sample_config.csv
oh-my-server/: CMakeLists.txt  client.cpp  db.proto  server.cpp  server_naive.cpp
ohmydb/: LevelDBProxy.H  OhMyReplica.H  ReplicatedDB.H
ohmyraft/: CMakeLists.txt  ConsensusUtils.H  OhMyRaft.H  PersistentStore.H  PersistentVector.H  PromiseStore.H  RaftRPCRouter.H  TestUtils.H  TimeTravelSignal.H  tester.cpp
ohmyserver/: CMakeLists.txt  DatabaseClient.H  DatabaseService.H  DatabaseServiceImpl.C  DatabaseUtils.H  RaftClient.cpp  RaftService.H  RaftServiceImpl.C  admin.cpp  client.cpp  client.h  db.proto  raft.h  raft.proto  replica.cpp  server.cpp  server.h  server_naive.cpp  updatemask.cpp
ohmytools/: CMakeLists.txt  readstore.cpp  writeconfig.csv  writestore.cpp
prototype/: hello.go
prototype/raftv/: raft.go  server.go
scripts/: README.md  cleanup_test.sh  cluster_setup.sh  deploy_modifed.sh  example_config.csv  node_setup.sh  reboot_cluster.sh  runDBLocal.sh  run_test.sh  run_tests.sh  startup_cluster_db.sh  startup_single_node.sh  vis.py
scripts/cloudlab_setup/: README.md  create_config.py  create_tmux_script.py  env.sh  sminstaller.py  smparser.py  smtmuxgen.py  smutils.py
scripts/membership/: run_admin.sh  run_new_node.sh
scripts/monitor/: clean_logs.sh  copy_logs.sh  copy_scripts.sh  deploy_monitor.sh  load.sh  mem.sh  monitor.sh  net.sh
tests/: readme.MD  run_correctness_test.py
tests/correctness_1/: rep0.csv  state.csv
tests/correctness_2/: rep1.csv  rep3.csv  rep4.csv
wowUtils/: OhMyConfig.H  WowLogger.H
